# UniversalSubs-repo-v0.9.2

./: .gitignore  BUILD_WHEEL_ONCE.md  PACKAGING.md  README.md  TESTING.md  install_and_run.bat  pyproject.toml  run.bat
proctap-src/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
proctap-src/.github/: release-drafter.yml
proctap-src/.github/workflows/: build-wheels.yml  publish-pypi.yml  release-testpypi.yml  test.yml
proctap-src/docs/: macos_include_exclude_pids_implementation.md
proctap-src/docs/experimental/c_extension_investigation/: CONCLUSION.md  DEBUG_LOG.md  FINDINGS.md  README.md  VERSION_COMPARISON.md  debug_device_streams.py  test_native_backend.py  test_native_simple.py  test_tap_direct.py
proctap-src/examples/: macos_advanced.py  macos_latency_benchmark.py  macos_native_benchmark.py  macos_screencapture_test.py  windows_basic.py
proctap-src/src/proctap/: __init__.py  _native.cpp  _version.py  core.py
proctap-src/src/proctap/backends/: macos_screencapture.py
proctap-src/src/proctap/swift/screencapture-audio/: Package.swift
proctap-src/src/proctap/swift/screencapture-audio/Sources/screencapture-audio/: main.swift
proctap-src/tests/: test_converter_optimizations.py
src/universalsubs/: __init__.py  __main__.py  app.py
wheels/: proc_tap-1.0.3-cp311-cp311-win_amd64.whl
